fix(header): correct height on mobile submit page

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -177,3 +177,7 @@
     margin-bottom: -4px;
   }
 }
+
+.singleAboutButton {
+  margin-bottom: 1px;
+}
